Fix ribbons displaying incorrectly on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,7 +333,7 @@ body {
     width: 80%;
     display: none;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .panel-board {
@@ -345,6 +345,7 @@ body {
 .panel {
     margin: 3%;
     background-size: cover;
+    aspect-ratio: 1/1;
 }
 
 .panel-light {
@@ -353,6 +354,20 @@ body {
 
 .panel-dark {
     background-image: url('../images/game/panels/panel-dark.png');
+}
+
+.arrow-panel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+}
+
+.arrow-panel>div {
+    background-image: url('../images/game/arrow-right.png');
+    background-size: cover;
+    width: 100%;
+    aspect-ratio: 1/1;
 }
 
 
@@ -508,11 +523,23 @@ body {
     #puzzle-panels {
         flex-direction: column-reverse;
         align-items: center;
-        row-gap: 32px;
+        column-gap: 32px;
     }
     
     .panel-board {
         width: 80%;
+    }
+
+    .arrow-panel {
+        width: 100%;
+        height: 10%;
+    }
+    
+    .arrow-panel>div {
+        background-image: url('../images/game/arrow-up.png');
+        width: auto;
+        height: 100%;
+        aspect-ratio: 1/1;
     }
 }
 
